CSS,JSのパスを変更

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="noindex" />
 
-    <link rel="shortcut icon" type="image/jpg" href="/favicon.ico">
-    <link rel="stylesheet" href="/CSS/style.css">
+  
+    <link rel="stylesheet" href="./CSS/style.css">
 
  
 </head>
@@ -244,7 +244,7 @@
 
 </main>
 
-    <script src="/JS/script.js"></script>
+    <script src="./JS/script.js"></script>
 
 </body>
 
